compiler/testData/cli/jvm/diagnosticTests/classAndFileClassClash.out
compiler/testData/cli/jvm/diagnosticTests/classAndFileClassClash.kt:1:1: error: duplicate JVM class name 'test/Foo' generated from: Foo, Foo
@file:JvmName("Foo")
^^^^^^^^^^^^^^^^^^^^
compiler/testData/cli/jvm/diagnosticTests/classAndFileClassClash.kt:6:1: error: duplicate JVM class name 'test/Foo' generated from: Foo, Foo
class Foo {}
^^^^^^^^^^^^
COMPILATION_ERROR
